# operations_research

./: .gitignore  README.md
engineering_optimization/: README.md
engineering_optimization/chap01/: eg01_11.mod  eg01_11.mzn  eg01_11.py
grokking_algorithms/01_intro_to_algorithms/: binary_search.py
gurobi_opt_101/: chap_01.ipynb  cost.csv  exercise_set1.ipynb  gurobi_modeling1.ipynb  widget_shipment.lp
nptel_optimization/: README.md  lec02_linear_reg.py  lec03_multiple_linear_reg.py  lec03_polynomial_reg.py  lec04_non_linear_reg.py
opt_methods_scipy/: README.md  ampl_eg_01.mod  ampl_eg_02.mod  ampl_eg_03.mod  ampl_eg_04.mod  intro_to_optimization.py
pyomo_bootcamp/: 01_leather_lp.py  02_furniture_lp.py  03_power_lp.py  04_clothes_mip.py  05_automobile_mip.py  06_travelling_salesman.py  07_walkway_nlp.py  08_circle_packing.py  09_production_nlp.py  10_oil_extraction_minlp.py  11_coil_design_minlp.py  12_pump_config_minlp.py  CLAUDE.md  README.md  S7P2_Data.csv  S7P3_Data.csv  main.py  main2.py  pump_data.csv  pyproject.toml  scip.set  test_ipopt.py  test_knitro.py  test_neos.py  test_scip.py
route_optimization/: cva_schedules.db  multi_hop_route_v1.py  multi_hop_route_v2.py
