[project]
name = "pyomo-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amplpy>=0.16.0",
    "cplex>=22.1.2.1",
    "gurobipy>=13.0.1",
    "highspy>=1.13.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "pyomo>=6.10.0",
]
